# Pomodoro

./: README.md  meson.build  org.gnome.Example.json
data/: org.gnome.Example.desktop.in  org.gnome.Example.gschema.xml  org.gnome.Example.metainfo.xml.in  org.gnome.Example.service.in
po/: POTFILES.in  meson.build
src/: main.js  meson.build  window.blp  window.js
